--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@
   --footer-icon: rgba(255, 255, 255, 0.1);
   --bgnd-text-color: rgba(47, 48, 58, 0.8);
   --modal-overlay-color: rgba(0, 0, 0, 0.2);
+  --input-dorder-color: rgba(33, 33, 33, 0.2);
+
 }
 
 body {
@@ -443,7 +445,7 @@ img {
   margin-left: 70px;
 }
 
-.social-title {
+.footer-title {
   font-weight: 700;
   line-height: 1.14em;
   text-transform: uppercase;
@@ -463,6 +465,55 @@ img {
 
 .social-list .social-link {
   color: var(--white-color);
+}
+
+/* footer form */
+
+.footer-form {
+  margin-left: 93px;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  margin-top: 20px;
+  background-color: var(--footer-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-btn {
+  font-family: inherit;
+  display: inline-flex;
+  align-items: center;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  padding: 10px 29px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88em;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  cursor: pointer;
+  border-style: none;
+
+}
+
+
+.send-icon {
+  display: block;
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+  margin-left: 10px;
 }
 /* portfolio */
 
@@ -579,7 +630,7 @@ img {
 }
 
 .portfolio-link:hover .card-active,
-.portfolio-link:focus                                    .card-active {
+.portfolio-link:focus .card-active {
   transform: translateY(0);
 }
 
@@ -617,6 +668,17 @@ img {
   border-radius: 50%;
   background-color: var(--white-color);
   cursor: pointer;
+  color: #000000;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-icon {
+  fill: currentColor;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  color: var(--accent-color);
 }
 
 .backdrop.is-hidden .modal {
@@ -624,6 +686,7 @@ img {
 }
 
 .modal {
+  
   position: absolute;
   top: 50%;
   left: 50%;
@@ -633,10 +696,136 @@ img {
   background-color: var(--white-color);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 40px;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* request form */
+
+.request-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.request-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15em;
+  color: var(--title-text-color);
+}
+
+.request-field{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.request-field:not(first-child) {
+  margin-top: 10px;
+}
+.request-descr  {
+  font-size: 12px;
+  line-height: 1.17em;
+  letter-spacing: 0.01em;
+
+}
+ .request-input {
+  width: 448px;
+  height: 40px;
+  padding-left: 50px;
+  border: 1px solid var(--input-dorder-color);
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.request-input:hover, 
+.request-input:focus {
+  border-color: var(--accent-color);
+}
+
+.request-input:hover+ .request-icon {
+  fill: var(--accent-color);
+}
+.request-comment {
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
+  border: 1px solid var(--input-dorder-color);
+  border-radius: 4px;
+  resize: none;
+}
+.request-comment::placeholder{
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.request-icon{
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+  margin-top: 4px;
+  fill: var(--title-text-color);
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Checkbox */
+
+.request-check {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71em;
+  margin-top: 12px;
+}
+
+.custom-check {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 15px;
+  background-color: var(--white-color);
+  border-radius: 2px;
+  border: 2px solid var(--title-text-color);
+  margin-right: 8px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:checked+ .custom-check {
+  background-color: var(--accent-color);
+  border: 2px solid var(--accent-color);
+}
+
+.request-link {
+  color: var(--accent-color);
+}
+.request-btn {
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88em;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  padding: 10px 55px;
+  color: var(--white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  margin-top: 30px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.request-btn:hover,
+.request-btn:focus {
+ background-color: #188CE8;
+}
 
 /* Скрыть заголовки */
 .visually-hidden {
