--- a/css/styles.css
+++ b/css/styles.css
@@ -472,12 +472,13 @@ img {
 .footer-subscription {
   margin-left: auto;
 }
-
+.footer-form {
+  margin-top: 20px;
+}
 .footer-input {
   width: 358px;
   height: 50px;
   padding-left: 16px;
-  margin-top: 20px;
   background-color: var(--footer-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
